--- a/taskserver/nodejs/package.json
+++ b/taskserver/nodejs/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.0.39",
     "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "typescript": "^2.7.1"
   }
 }
