--- a/taskserver/nodejs/package.json
+++ b/taskserver/nodejs/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.0.39",
+    "axios": "^0.17.1",
     "express": "^4.16.2"
   },
   "devDependencies": {
